@@ -1,42 +1,0 @@
-package net.ttddyy.dsproxy.listener;
-
-import net.ttddyy.dsproxy.ExecutionInfo;
-import net.ttddyy.dsproxy.QueryInfo;
-
-import java.util.ArrayList;
-import java.util.List;
-
-/**
- * Execute chain of listeners.
- *
- * @author Tadaya Tsuyukubo
- */
-public class ChainListener implements ProxyDataSourceListener {
-    private List<ProxyDataSourceListener> listeners = new ArrayList<>();
-
-    @Override
-    public void beforeQuery(ExecutionInfo execInfo, List<QueryInfo> queryInfoList) {
-        for (ProxyDataSourceListener listener : listeners) {
-            listener.beforeQuery(execInfo, queryInfoList);
-        }
-    }
-
-    @Override
-    public void afterQuery(ExecutionInfo execInfo, List<QueryInfo> queryInfoList) {
-        for (ProxyDataSourceListener listener : listeners) {
-            listener.afterQuery(execInfo, queryInfoList);
-        }
-    }
-
-    public void addListener(ProxyDataSourceListener listener) {
-        this.listeners.add(listener);
-    }
-
-    public List<ProxyDataSourceListener> getListeners() {
-        return listeners;
-    }
-
-    public void setListeners(List<ProxyDataSourceListener> listeners) {
-        this.listeners = listeners;
-    }
-}
